# python-project-initializer

./: README.md  project_config.yaml  pyproject.toml  setup_project.py
