[tool.poetry]
name = "python-project-initializer"
version = "0.1.0"
description = ""
authors = ["Moritz"]
readme = "README.md"
packages = [{include = "python_project_initializer"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
toml = "^0.10.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
